<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_title"
        android:visibility="invisible"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/textView"
        android:layout_below="@+id/lbl_title"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_address"
        android:visibility="invisible"
        android:id="@+id/lbl_address"
        android:layout_below="@+id/lbl_title"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:id="@+id/textView2"
        android:layout_below="@+id/lbl_address"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_phone"
        android:visibility="invisible"
        android:id="@+id/lbl_phone"
        android:layout_below="@+id/lbl_address"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transport"
        android:id="@+id/textView3"
        android:layout_below="@+id/lbl_phone"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_transport"
        android:visibility="invisible"
        android:id="@+id/lbl_transport"
        android:layout_below="@+id/lbl_phone"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView3" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_transport"
        android:layout_above="@+id/btn_email"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/lbl_description"
            android:visibility="invisible" />

    </ScrollView>



    <Button
        android:id="@+id/btn_email"
        android:text="@string/send_email"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>